<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/playerScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/score"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />
        <EditText
                android:id="@+id/addName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint" />
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fav" />
        <EditText
                android:id="@+id/addClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/course_hint" />
    </LinearLayout>

    <Button
            android:id="@+id/savePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"/>

</LinearLayout>